--- a/styles/common/navigation.scss
+++ b/styles/common/navigation.scss
@@ -23,6 +23,10 @@
   display: grid;
   width: 100%;
   padding: 18px 0;
+  position: sticky;
+  top: 74px;
+  background: $gradient-white;
+  z-index: 5;
 
   .app_nav_wrapper {
     @extend .grid_center;
