--- a/styles/home/mainbanner.scss
+++ b/styles/home/mainbanner.scss
@@ -20,9 +20,73 @@
   }
 
   .app_main_slider_banner {
+    position: relative;
+    overflow: hidden;
+
+    > button {
+      position: absolute;
+      top: 50%;
+      z-index: 2;
+      width: 40px;
+      height: 40px;
+      background: $transparent;
+      border: 1px solid $transparent;
+      transform: translateY(-50%);
+      transition: 0.5s;
+
+      > span {
+        width: 40px;
+        height: 40px;
+
+        > svg {
+          color: $white;
+        }
+      }
+
+      &.app_main_prev {
+        left: -50px;
+      }
+
+      &.app_main_next {
+        right: -50px;
+      }
+    }
+
+    .swiper {
+      .swiper-pagination {
+        bottom: -40px;
+        transition: 0.5s;
+
+        .swiper-pagination-bullet {
+          background: $white;
+        }
+      }
+    }
+
     > img {
       width: 100%;
       height: auto;
+    }
+
+    &:hover {
+      > button {
+        transition: 0.5s;
+
+        &.app_main_prev {
+          left: 0px;
+        }
+
+        &.app_main_next {
+          right: 0px;
+        }
+      }
+
+      .swiper {
+        .swiper-pagination {
+          bottom: 10px;
+          transition: 0.5s;
+        }
+      }
     }
   }
 
