--- a/styles/core/base.scss
+++ b/styles/core/base.scss
@@ -83,8 +83,12 @@ address {
   display: flex;
   flex-direction: column;
   align-items: center;
-  width: 1400px;
+  max-width: 1400px;
   margin: 0 auto;
+  width: 100%;
+}
+.app_main_cover {
+  width: 100%;
 }
 .skip-link {
   position: absolute;
