--- a/styles/home/otherpage.scss
+++ b/styles/home/otherpage.scss
@@ -50,65 +50,16 @@
   }
 }
 
-.app_main_product_category {
-  display: flex;
-  width: 100%;
-  margin-top: 30px;
-
-  > ul {
-    display: flex;
-    width: 100%;
-    gap: 16px;
-
-    > li {
-      display: flex;
-      width: 20%;
-      padding: 0px 20px;
-      border-radius: 10px;
-      align-items: center;
-      background: $bgnewcatg;
-      border: 1px solid lighten($bgcategory, 16%);
-
-      > span {
-        position: relative;
-        display: flex;
-        width: 100px;
-        height: 80px;
-
-        > img {
-          width: 80px !important;
-          mix-blend-mode: darken;
-        }
-      }
-
-      .app_text_head_dis {
-        display: flex;
-        flex-direction: column;
-
-        > h4 {
-          font-size: 17px;
-          font-weight: 800;
-          line-height: 1.2;
-        }
-
-        > p {
-          font-size: 14px;
-          font-weight: 500;
-        }
-      }
-    }
-  }
-}
-
 .app_main_page_content {
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
   width: 100%;
   margin-top: 30px;
+  gap: 18px;
 
   .app_sidebar_filter {
-    width: 20%;
+    width: calc(16% - 9px);
 
     h5 {
       font-size: 15px;
@@ -123,22 +74,47 @@
       .app_filter_items {
         display: flex;
         flex-direction: column;
-        margin-bottom: 14px;
+        margin-bottom: 10px;
+        border-radius: 8px;
+        overflow: hidden;
+        border: 1px solid lighten($bgcategory, 16%);
 
         h6 {
+          padding: 8px 18px;
           font-size: 13px;
-          margin-bottom: 4px;
+          background: $bgnewcatg;
+          border-bottom: 1px solid lighten($bgcategory, 16%);
         }
 
         ul {
+          padding: 12px 18px;
+
           li {
             display: flex;
-            gap: 8px;
-            width: 100%;
+            margin-bottom: 6px;
+
+            &:last-child {
+              margin-bottom: 0px;
+            }
 
             > label {
-              font-size: 13px;
-              font-weight: 600;
+              display: flex;
+              gap: 8px;
+              width: 100%;
+              cursor: pointer;
+
+              > p {
+                font-size: 14px;
+                font-weight: 700;
+                transition: 0.5s;
+              }
+            }
+
+            &:hover label {
+              > p {
+                color: $btn;
+                transition: 0.5s;
+              }
             }
           }
         }
@@ -147,7 +123,138 @@
   }
 
   .app_main_list_content_area {
-    width: 80%;
+    width: calc(84% - 9px);
+
+    h4 {
+      font-size: 20px;
+      text-transform: capitalize;
+    }
+
+    .app_main_product_category {
+      display: flex;
+      width: 100%;
+      margin: 20px 0px;
+      flex-direction: column;
+
+      h6 {
+        color: darken($price, 10%);
+        font-size: 14px;
+        margin-bottom: 4px;
+        text-transform: capitalize;
+      }
+
+      > ul {
+        display: flex;
+        width: 100%;
+        gap: 16px;
+
+        > li {
+          display: flex;
+          width: 20%;
+          padding: 0px 12px;
+          border-radius: 10px;
+          align-items: center;
+          background: $bgnewcatg;
+          border: 1px solid lighten($bgcategory, 16%);
+
+          > span {
+            position: relative;
+            display: flex;
+            width: 83px;
+            height: 70px;
+
+            > img {
+              width: 70px !important;
+              mix-blend-mode: darken;
+            }
+          }
+
+          .app_text_head_dis {
+            display: flex;
+            flex-direction: column;
+
+            > h4 {
+              font-size: 17px;
+              font-weight: 800;
+              line-height: 1.2;
+            }
+
+            > p {
+              font-size: 13px;
+              font-weight: 600;
+            }
+          }
+        }
+      }
+    }
+
+    .app_chipset_list_items {
+      width: 100%;
+
+      h6 {
+        color: darken($price, 10%);
+        font-size: 14px;
+        margin-bottom: 4px;
+        text-transform: capitalize;
+      }
+
+      ul {
+        width: 100%;
+        display: flex;
+        flex-wrap: wrap;
+        gap: 6px;
+
+        > li {
+          display: flex;
+
+          > a {
+            display: flex;
+            gap: 4px;
+            padding: 5px 11px 5px 16px;
+            border-radius: 8px;
+            align-items: center;
+            border: 1px solid $border;
+            transition: 0.5s;
+
+            > p {
+              color: $black;
+              font-size: 13px;
+              font-weight: 700;
+              transition: 0.5s;
+            }
+
+            > span {
+              width: 12px;
+              height: 12px;
+              margin-top: -1px;
+              margin-left: 3px;
+
+              > svg {
+                width: 12px;
+                height: 12px;
+                transition: 0.5s;
+              }
+            }
+
+            &:hover {
+              background: lighten($btn, 46%);
+              border: 1px solid $btn;
+              transition: 0.5s;
+
+              > p {
+                color: $btn;
+                transition: 0.5s;
+              }
+
+              > span > svg {
+                color: $btn;
+                transition: 0.5s;
+              }
+            }
+          }
+        }
+      }
+    }
   }
 }
 
@@ -155,28 +262,43 @@
   display: flex;
   width: 100%;
   margin-top: 30px;
+  flex-direction: column;
+
+  > h5 {
+    color: darken($price, 16%);
+    font-size: 14px;
+    margin-bottom: 4px;
+    text-transform: capitalize;
+  }
 
   > ul {
     display: flex;
     width: 100%;
-    gap: 15.3px;
+    gap: 14px;
 
     > li {
-      width: 12%;
+      width: 10%;
       display: flex;
-      padding: 14px 20px;
+      padding: 16px 20px;
       border-radius: 10px;
       flex-direction: column;
       align-items: center;
       background: $bgnewcatg;
       border: 1px solid lighten($bgcategory, 16%);
+      position: relative;
 
       > span {
         position: relative;
         display: flex;
-        width: 100%;
+        width: 50px;
+        height: 50px;
         justify-content: center;
-        margin-bottom: 8px;
+        margin-bottom: 10px;
+
+        > svg {
+          width: 50px;
+          height: 50px;
+        }
 
         > img {
           width: 80px !important;
@@ -185,9 +307,15 @@
       }
 
       > h6 {
-        font-size: 15px;
+        font-size: 14px;
         font-weight: 700;
         line-height: 1.2;
+      }
+
+      .app_status_update {
+        position: absolute;
+        top: 5px;
+        right: 5px;
       }
 
       &::after {
