--- a/styles/core/color.scss
+++ b/styles/core/color.scss
@@ -4,6 +4,7 @@ $transparent: transparent;
 $white: #ffffff;
 $black: #000000;
 $red: #ff0000;
+$green: #0c8d23;
 
 $topcol: #3f3f3f;
 $searchic: #1a1a1a;
