--- a/styles/global.scss
+++ b/styles/global.scss
@@ -13,3 +13,5 @@
 @import "./home/advt.scss";
 @import "./home/carousel.scss";
 @import "./home/otherpage.scss";
+
+@import "./details/details.scss";
